# disk_cleanup

./: .env.example  ARCHITECTURE.md  GEMINI.md  README.md  REFACTORING_NOTES.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: post-attach-commands.sh  post-create-commands.sh
docs/: prompt.md
safewipe/: __init__.py  config.py  device.py  exceptions.py  format.py  logger.py  main.py  test_safewipe.py  ui.py  utils.py  wipe.py
